--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.4",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.3"
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
+    "expo": "^46.0.0",
+    "expo-checkbox": "~2.2.0",
+    "expo-image-picker": "~13.3.1",
+    "expo-local-authentication": "~12.3.0",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-animated-input": "^1.1.0",
+    "react-native-element-dropdown": "^2.7.1",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-pin-code": "^0.5.3",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screen": "^1.0.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.21.0"
   },
   "private": true
 }
