--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-community/datetimepicker": "6.2.0",
-    "@react-navigation/drawer": "^6.6.2",
-    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.4",
     "expo": "^46.0.0",
     "expo-checkbox": "~2.2.0",
     "expo-image-picker": "~13.3.1",
     "expo-local-authentication": "~12.3.0",
     "expo-status-bar": "~1.4.0",
-    "react": "18.2.0",
-    "react-native": "0.71.4",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
     "react-native-animated-input": "^1.1.0",
     "react-native-element-dropdown": "^2.7.1",
     "react-native-gesture-handler": "~2.5.0",
