--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-local-authentication": "~12.3.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
+    "react-curved-text": "^2.0.1",
     "react-native": "0.69.6",
     "react-native-animated-input": "^1.1.0",
     "react-native-element-dropdown": "^2.7.1",
